continue working on more content

--- a/js/app.json
+++ b/js/app.json
@@ -53,6 +53,6 @@
 
 {"title" : "Carry a cooler pack with clean foods each day", "image" : "/img/imagefile.png", "shortContent" : "AAA", "extendedContent" : ""}
 
-{"title" : "Journal your thoughts", "image" : "/img/imagefile.png", "shortContent" : "AAA", "extendedContent" : ""}
+{"title" : "Fresh fruits and vegetables", "image" : "/img/imagefile.png", "shortContent" : "Depend on fresh & vegetables for fiber, viamins, nutrients & enzymes.", "extendedContent" : ""}
 
-{"title" : "Journal your thoughts", "image" : "/img/imagefile.png", "shortContent" : "AAA", "extendedContent" : ""}
+{"title" : "Adhere to proper portion sizes", "image" : "/img/imagefile.png", "shortContent" : "AAA", "extendedContent" : "Bigger is better, right? No, not necessarily, especially when discussing portions of your food. "}
